<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".HelloWorld">

    <TextView
        android:text="@string/com_appboy_hello_instructions_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/com_appboy_hello_instructions"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#f33e3e"/>
  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/com_appboy_hello_high_score_submit_hint"
    android:id="@+id/com_appboy_hello_submit"
    android:layout_alignParentBottom="true"/>
  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="@string/com_appboy_hello_high_score_nickname_hint"
    android:ems="10"
    android:id="@+id/com_appboy_hello_high_score_nickname"
    android:layout_below="@+id/com_appboy_hello_instructions"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="77dp"/>
  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:ems="10"
    android:id="@+id/com_appboy_hello_high_score"
    android:hint="@string/com_appboy_hello_high_score_hint"
    android:layout_below="@+id/com_appboy_hello_high_score_nickname"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>
  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="10"
    android:id="@+id/com_appboy_hello_email"
    android:layout_alignBottom="@+id/com_appboy_hello_high_score_nickname"
    android:layout_alignParentLeft="true"
    android:hint="@string/com_appboy_hello_email_address_hint"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="31dp"/>
</RelativeLayout>
